--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
 <!DOCTYPE HTML>
+
+<!-- (`.
+) )
+( (
+\ \
+ \ \
+.-'  `-.
+/        `.
+(      )    `-._ ,    _
+)   ,'         (.\--'(
+\  (         ) /      \
+\  \_(     / (    <6 (6
+\_)))\   (   `._  .:Y)__
+ '''  \   `-._.'`---^_)))
+	   `-._ )))       ```
+			```           not sure if I write confusing code, but I like it.    -->
 <html>
 	<head>
 		<title>Riiiiicky  🎈</title>
@@ -12,10 +28,10 @@
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
+  gtag('js', new Date())                                                                        
   gtag('config', 'UA-141585746-1');
 </script>
+
 	</head>
 	<body class="is-preload">
 
@@ -34,28 +50,13 @@
 									</h8>
 								</br>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/open?id=1GM7g0Em5wYi8vcphSXwcIVdq0E3Jgorz" class="button primary color2 contact-button">Resume</a></li>
+										<li><a href="https://drive.google.com/open?id=1GM7g0Em5wYi8vcphSXwcIVdq0E3Jgorz" target="_blank" class="button primary color2 contact-button">Resume</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
 									<img src="images/pic01.jpg" alt="" />
 								</div>
 							</section>
-
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
-								<div class="content span-7">
-									<h2 class="major1">ABOUT ME</h2>
-									<p>I always get excited about learning new things, adapting to the new environment, hitting the goals that I set, and making things happen.</br>
-										I enjoy crafting the moment-by-moment experience of causes and effects, inputs and feedback, expectations and surprises. Successfully getting my users into the “flow” experiences that I designed has been very satisfying.</br>
-									</br>Last but not least, I am a foodie who likes spicy food and still wants to maintain a healthy diet, good luck with that :)
-										</p>
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
-								</div>
-							</section>
-
 
 						<!-- Panel -->
 							<section class="panel">
@@ -83,7 +84,22 @@
 								</div>
 							</section>
 							
-	
+
+						<!-- Panel (Spotlight) -->
+						<section class="panel spotlight medium right" id="first">
+							<div class="content span-7">
+								<h2 class="major1">ABOUT ME</h2>
+								<p>I always get excited about learning new things, adapting to the new environment, hitting the goals that I set, and making things happen.</br>
+									I enjoy crafting the moment-by-moment experience of causes and effects, inputs and feedback, expectations and surprises. Successfully getting my users into the “flow” experiences that I designed has been very satisfying.</br>
+								</br>Last but not least, I am a foodie who likes spicy food and still wants to maintain a healthy diet, good luck with that :)
+									</p>
+							</div>
+							<div class="image filtered tinted" data-position="top left">
+								<img src="images/pic02.jpg" alt="" />
+							</div>
+						</section>
+
+
 						<!-- Panel -->
 							<section class="panel color4-alt">
 								<div class="intro color4">
@@ -92,7 +108,6 @@
 									<ul class="actions">
 										<li><a href="mailto:rickyzhangdesign@gmail.com" class="button primary color2 contact-button">Let's Chat</a></li>
 									</ul>
-
 
 								</br>
 								</br>
@@ -116,3 +131,9 @@
 
 	</body>
 </html>
+
+<!-- ──▄████▄─────
+ ─▒─▄▒─▄▒──███▄█▀──────
+ ─▒▒▒▒▒▒▒─▐████──█──█──
+ ─▒▒▒▒▒▒▒──█████▄──────
+ ─▒─▒─▒─▒───▀████▀───── -->
