--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<a href="https://medium.com/@beizizhang/diary-brand-campaign-case-study-9f57277cfe7f" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>VIEW CASE STUDY</span><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										<a href="https://blog.prototypr.io/pill-monster-case-study-b235e4ee1e0e" target="_blank" class="image filtered span-3" data-position="top"><span>VIEW CASE STUDY</span><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<a class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
 								</div>
 							</section>
 							
