--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<div class="content color0 span-3-75">
 									<h7 class="major">HI THERE, <br />
 									DELIGHTED TO MEET YOU</h7>
-									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>I am an Experience Designer at Adobe for design digital imaging tools by day, create building blocks that help people build what they imagine.
+									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>I am an Experience Designer for design digital imaging tools by day, create building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
 									</h8>
 								</br>
 									<ul class="actions">
