--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 								<div class="content color0 span-3-75">
 									<h7 class="major">HI THERE, <br />
 									DELIGHTED TO MEET YOU</h7>
-									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>I am an Experience Designer for design digital imaging tools by day, create building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
+									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>I am an Experience Designer designing digital imaging tools by day, creating building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
 									</h8>
 								</br>
 									<ul class="actions">
@@ -69,8 +69,8 @@
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="https://medium.com/@beizizhang/36-days-commitment-experience-and-lessons-learned-from-the-daily-challenge-6d1b23c8cece" target="_blank" class="image filtered span-3" data-position="bottom"><span>MORE INFO</span><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="mailto:rickyzhangdesign@gmail.com?subject=Request for password" target="_blank" class="image filtered span-1-5" data-position="center"><span>MORE INFO</span><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="mailto:rickyzhangdesign@gmail.com?subject=Request for password" target="_blank" class="image filtered span-3" data-position="bottom"><span>MORE INFO</span><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="https://www.behance.net/gallery/79264029/36-Days-of-3D-Type-Part1" target="_blank" class="image filtered span-1-5" data-position="center"><span>MORE INFO</span><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 										<a href="https://medium.com/swlh/blood-donor-app-redesign-case-study-4e0325d3a346" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>VIEW CASE STUDY</span><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
 									<a href="https://www.instagram.com/theboringprojects/" target="_blank" class="image filtered span-2-5" data-position="top"><span>MORE INFO</span><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
