--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
 								<div class="content color0 span-3-75">
 									<h7 class="major">HI THERE, <br />
 									DELIGHTED TO MEET YOU</h7>
-									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>I am an Experience Designer designing digital imaging tools by day, creating building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
+									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>
+										<br>
+										I am an Experience Designer designing digital imaging tools by day, creating building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
 									</h8>
 								</br>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/open?id=12cjwvaBnqv5C3qJFwL8P9oxtAcPtqLaJ" target="_blank" class="button primary color2 contact-button">Resume</a></li>
+										<li><a href="https://drive.google.com/file/d/1PLw8SygEorJS6LAliIc6i8Fh5snjs6jf/view?usp=sharing" target="_blank" class="button primary color2 contact-button">Resume</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
@@ -61,19 +63,27 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major2">SELECTED WORK</h2>
-									<p>At school, I have been explored new frontiers of design with cutting-edge tools and traditional craft-based techniques, applied speculative design thinking methodology to school projects, from hand-crafted prototypes to high-fidelity mockups.</br> 
-									</br>Due to NDA, I can not share my work projects, full portfolio upon request.
-								 
+									<h2 class="major2">IN THE MEDIA</h2>
+									<p><b>I write articles, review products, share insights:</b>
+										<li><a href="https://uxdesign.cc/my-first-impression-about-shape-a-new-tool-from-ideo-product-review-11da6b80853/">Shape product review</a></li>
+										<li><a href="https://uxdesign.cc/living-with-design-some-thinking-about-wwdc20-70d953173de9/">My two cents on WWDC20</a></li>
+									<br>
+									<br>
+									<h2 class="major4">IN THE COMMUNITY</h2>
+									<b>I mentor aspiring designers, I curate exhibitions:</b>
+									<br>
+										<li><a href="https://www.adplist.org/mentors/ricky-zhang/">Amazing Design People List - Mentor</a></li>
+										<li><a href="https://www.hireheroesusa.org/">Hireheroes - Mentor</a></li>
 										</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="mailto:rickyzhangdesign@gmail.com?subject=Request for password" target="_blank" class="image filtered span-3" data-position="bottom"><span>MORE INFO</span><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="https://www.behance.net/gallery/79264029/36-Days-of-3D-Type-Part1" target="_blank" class="image filtered span-1-5" data-position="center"><span>MORE INFO</span><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="https://medium.com/swlh/blood-donor-app-redesign-case-study-4e0325d3a346" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>VIEW CASE STUDY</span><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="https://calendly.com/rickyzhangdesign/chat" target="_blank" class="image filtered span-3" data-position="bottom"><span>MORE INFO</span><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
+										<a href="mailto:rickyzhangdesign@gmail.com?subject=Request for password" target="_blank" class="image filtered span-1-5" data-position="center"><span>REQUEST PASSWORD</span><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
+										<a href="mailto:rickyzhangdesign@gmail.com?subject=Request for password" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>REQUEST PASSWORD</span><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 									</div>
 									<a href="https://www.instagram.com/theboringprojects/" target="_blank" class="image filtered span-2-5" data-position="top"><span>MORE INFO</span><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+									
 									<div class="group span-4-5">
 										<a href="https://www.behance.net/gallery/81218203/Product-Design-the-constellation-maker" target="_blank" class="image filtered span-3" data-position="top"><span>MORE INFO</span><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
 										<a href="https://medium.com/@beizizhang/task-management-rank-case-study-b2f36682b1a5" target="_blank" class="image filtered span-1-5" data-position="center"><span>VIEW CASE STUDY</span><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
