--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 									DELIGHTED TO MEET YOU</h7>
 									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>
 										<br>
-										I am an Experience Designer designing digital imaging tools by day, creating building blocks that help people build what they imagine. Based in Bay Area, work @Adobe.
+										I am an <strong>Experience Designer</strong> creating building blocks that help people build what they imagine during the day, and playing with my drawing pad at night. Check my boring projects <a href="https://www.instagram.com/theboringprojects/">here</a>.
+										<br><br>Based in Bay Area, working @Adobe.
 									</h8>
 								</br>
 									<ul class="actions">
@@ -65,12 +66,12 @@
 								<div class="intro color2">
 									<h2 class="major2">IN THE MEDIA</h2>
 									<p><b>I write articles, review products, share insights:</b>
-										<li><a href="https://uxdesign.cc/my-first-impression-about-shape-a-new-tool-from-ideo-product-review-11da6b80853/">Shape product review</a></li>
+										<li><a href="https://uxdesign.cc/my-first-impression-about-shape-a-new-tool-from-ideo-product-review-11da6b80853/">Product review - Shape by IDEO</a></li>
 										<li><a href="https://uxdesign.cc/living-with-design-some-thinking-about-wwdc20-70d953173de9/">My two cents on WWDC20</a></li>
 									<br>
 									<br>
 									<h2 class="major4">IN THE COMMUNITY</h2>
-									<b>I mentor aspiring designers, I curate exhibitions:</b>
+									<b>I mentor aspiring designers, curate exhibitions:</b>
 									<br>
 										<li><a href="https://www.adplist.org/mentors/ricky-zhang/">Amazing Design People List - Mentor</a></li>
 										<li><a href="https://www.hireheroesusa.org/">Hireheroes - Mentor</a></li>
