--- a/pintjourney.html
+++ b/pintjourney.html
@@ -19,7 +19,7 @@
   
   <div id="navbar">
 	<div class="navbar-left">
-	  <a id="navbar_home" href="homepage.html"><svg width="36" height="36">
+	  <a id="navbar_home" href="index.html"><svg width="36" height="36">
 		<circle cx="18" cy="18" r="18"
 		fill="#fdd62c" />
 	  </svg></a>
