--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<h8></br>👩🏻‍💻🤹🏻👩🏻‍🎨‍</br>
 										<br>
 										I am an <strong>Experience Designer</strong> creating building blocks that help people build what they imagine during the day, and playing with my drawing pad at night. Check my boring projects <a href="https://www.instagram.com/theboringprojects/">here</a>.
-										<br><br>Based in Bay Area, working @Adobe.
+										<br><br>Based in Bay Area, <a href="adobe.html"><u>Working @Adobe.</u></a>
 									</h8>
 								</br>
 									<ul class="actions">
@@ -67,24 +67,24 @@
 								<div class="intro color2">
 									<h2 class="major7">IN THE MEDIA</h2>
 									<p><b>I write articles, review products, share insights:</b>
-										<li><a href="https://uxdesign.cc/my-first-impression-about-shape-a-new-tool-from-ideo-product-review-11da6b80853/">Product review - Shape by IDEO</a></li>
-										<li><a href="https://uxdesign.cc/living-with-design-some-thinking-about-wwdc20-70d953173de9/">My two cents on WWDC20</a></li>
+										<li><a href="https://uxdesign.cc/my-first-impression-about-shape-a-new-tool-from-ideo-product-review-11da6b80853/"><u>Product review - Shape by IDEO</u></a></li>
+										<li><a href="https://uxdesign.cc/living-with-design-some-thinking-about-wwdc20-70d953173de9/"><u>My two cents on WWDC20</u></a></li>
 									<br>
 									<br>
 									<h2 class="major4">IN THE COMMUNITY</h2>
 									<b>I mentor aspiring designers, curate exhibitions:</b>
 									<br>
-										<li><a href="https://www.adplist.org/mentors/ricky-zhang/">Amazing Design People List - Mentor</a></li>
-										<li><a href="https://www.hireheroesusa.org/">Hireheroes - Mentor</a></li>
+										<li><a href="https://www.adplist.org/mentors/ricky-zhang/"><u>Amazing Design People List - Mentor</u></a></li>
+										<li><a href="https://www.hireheroesusa.org/"><u>Hireheroes - Mentor</u></a></li>
 										</p>
 								</div>
 							</section>
 							<section class="panel">
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="covidresponse.html" target="_blank" class="image filtered span-3" data-position="bottom"><span>MY COVID RESPONSE:MENTORSHIP</span><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-										<a href="adobe.html" target="_blank" class="image filtered span-1-5" data-position="center"><span>MY ADOBE JOURNEY</span><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-										<a href="theboringprojects.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>THE BORING PROJECTS</span><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
+										<a href="covidresponse.html" target="_blank" class="image filtered span-3" data-position="bottom"><span>MY COVID RESPONSE:MENTORSHIP</span><img src="images/gallery/thumbs/covid.jpg" alt="" /></a>
+										<a href="adobe.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>WORK @ ADOBE</span><img src="images/gallery/thumbs/adobe.jpg" alt="" /></a>
+										<a href="theboringprojects.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>SIDE PROJECTS</span><img src="images/gallery/thumbs/boring.jpg" alt="" /></a>
 									</div>
 								</div>
 							</section>
