--- a/pillmonster.html
+++ b/pillmonster.html
@@ -63,88 +63,16 @@
 				<hr>
     		</div>
     	</div>
-<!-- Objective -->
 
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			   <h4>OBJECTIVE</h4>
-			 <p class="myh3">Create a way to improve medication experience for the millennials who struggle with:</p>
-			 <ul class="bulletpoints">
-				<li>remembering to take vitamins or medication on time</li>
-				<li>finding time to get refills</li>
-				<li>being satisfied with existing reminders</li>
-			 </ul>
-			 <p class="myh4">Reference: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3068890/" target="_blank">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3068890/</a></p>
-			<p class="myh2">What exists today?</p>
-			<ul class="bulletpoints">
-			<li>Many teenagers being afraid of even hates taking pills, how might we encourage them take vitamins or medication in a positive way?</li>
-			<li>Many teenagers didn’t realized they should take their medication as recommended, how could we help them keep track of their daily doses?</li>
-			</ul>
-			 <hr>					
-		 </div>
-	</div>		
-  </div>
-  
-<!-- Problems -->		
-		
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			<h4>PROBLEMS</h4>
-			<ul class="bulletpoints">
-				<li>Take wrong medicine. The top accidental ingestion risks for young children: diaper rash products, ibuprofen, multivitamins, and topical anti-fungal preparations.</li>
-				<li>Afraid of taking medication even vitamin​. They are afraid of taking medications even lots of vitamins have the cute colorful bear shape.</li>
-				<li>Always forget to take a pill, the most common teen medicine mistakes: forgetting to take a medicine and then doubling up; Taking two medicines with the same ingredient and taking the wrong medication.</li>
-				<li>No motivation to take daily vitamin. teenagers require a certain amount of nutrients in their daily diet. However, part of them think to take daily vitamin is a useless thing, they don’t have the motivation to do that.</li>
-			</ul>
-			 <hr>
-		 </div>
-	</div>		
-  </div>	
-
-<!-- Goals -->		
-		
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			 <h4>GOALS</h4>
-			 <ul class="bulletpoints">
-			   <p class="myh2">The overall goals were to:</p>
-			   <li>Life goals — keep track of their daily doses on time.</li>
-			   <li>End goals — build a positive habit, giving teenagers a greater sense of self-care . let this product be part of their life.</li>
-			   <li>Experience goals — feel more care about themselves. the whole user experiences will be easier to blend in their daily routine, without extra education cost.Then giving them a user-friendly experience.</li>
-			 </ul>
-			 <hr>
-		 </div>
-	</div>		
-  </div>
-<!-- THE PROCESS -->
-
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			<h4>THE PROCESS</h4>
-			 <img src="images/pillmonster/research.png">
-			 <img src="images/pillmonster/productresearch.png">
-			 <img src="images/pillmonster/systemmap.png">
-			 <img src="images/pillmonster/journeymap.png">
-			 <hr>
-		 </div>
-	</div>		
-  </div>	
+	
 
 <!-- Goals -->		
 		
 		<div id="business">
            <div id="business_center">
     			<div class="business_font">
-					<h4>IDEATION</h4>
-					<img src="images/pillmonster/wireframe.png">
-					<img src="images/pillmonster/wireframe_big.png">
-					<img src="images/pillmonster/story1.png">
-					<img src="images/pillmonster/story2.png">
-					<img src="images/pillmonster/story3.jpg">
+					<h4>CASE STUDY</h4>
+					<a href="https://blog.prototypr.io/pill-monster-case-study-b235e4ee1e0e" target="_blank"><img src="images/pillmonster/medium.png"></a>
 					<hr>
     			</div>
 		   </div>		
@@ -153,11 +81,7 @@
 		 <div id="business">
 			<div id="business_center">
 				 <div class="business_font">
-					 <h4>MOCKUPS</h4>
-					 <img src="images/pillmonster/3d.png"><BR>
-					 <img src="images/pillmonster/combo.png">
 					 <img src="images/pillmonster/animation.gif">
-					 <hr>
 				 </div>
 			</div>		
 		  </div>	
@@ -167,7 +91,6 @@
 		<div id="business">
 			<div id="business_center">
 		 		<div class="business_font">
-					<h4>PROTOTYPE</h4>
 					<iframe src="https://player.vimeo.com/video/254065339" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 					<br>
 					<br>
@@ -178,12 +101,12 @@
 <div id="business">
 	<div id="business_center">
 	  <div class="mybtn">
-		<a class="btn_left" href="venmo.html"> 
-  <div class="mybtn_wenzi">PREV PROJECT</div>
+		<a class="btn_left" href="adobe.html"> 
+  <div class="mybtn_wenzi">< ADOBE WORK</div>
   </a>	
   
 	<a href="pintjourney.html" class="btn_right"> 
-  <div class="mybtn_wenzi">NEXT PROJECT</div>		
+  <div class="mybtn_wenzi">PINT JOURNEY ></div>		
   </a>	
   
   </div>
