--- a/pintjourney.html
+++ b/pintjourney.html
@@ -66,62 +66,13 @@
     		</div>
     	</div>
 
-<!-- Objective -->
-
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			   <h4>OBJECTIVE</h4>
-			 <p class="myh3">How might we engage blood donors and blood receivers? How might we create a delightful experience for new blood donors?</p>
-			 <ul class="bulletpoints">
-				 <li>The answers can be found in this Blood Donation experience redesign project. After substantial user research and observation, I added two fairly well-received features: Tracking & Personal Assistant. </li>
-				<li>My first experience with blood donation took place during my freshman year in college. I saw this as an opportunity to help people.  When I arrived at the blood donation truck, I had to fill out many forms before I was able to give a sample of my blood. I was given milk and cookies after the procedure but did not receive any information regarding whom my blood might be helping.</li>
-				</ul>
-			 <hr>					
-		 </div>
-	</div>		
-  </div>			
-<!-- Goals -->		
-		
-		<div id="business">
-           <div id="business_center">
-    			<div class="business_font">
-					<h4>DESIGN GOALS</h4>
-					<ul class="bulletpoints">
-					  <p class="myh2">The overall goals were to:</p>
-					  <li>Let people feel comfortable when they donate their blood</li>
-					  <li>Improve the awareness about blood donation</li>
-					  <li>Enlarge the donor community </li>
-					  <li>If I worked on the blood donor app team, bringing the app rating from the current 3.5/5 stars to 4/5 stars in the App store could be one of the measurable goals. Another measurement could be enlarging the community of blood donors.</li>
-					</ul>
-					<hr>
-    			</div>
-		   </div>		
-         </div>			
 		
 
-			
-
-<!-- THE PROCESS -->
-
-		<div id="business">
-           <div id="business_center">
-    			<div class="business_font">
-      				<h4>THE PROCESS</h4>
-					<img src="images/pintjourney/RESEARCH.png">
-					<img src="images/pintjourney/Artboard 2.png">
-					<img src="images/pintjourney/Screen Shot 2018-03-18 at 6.41.10 PM.png">
-					<hr>
-    			</div>
-		   </div>		
-		 </div>	
-		
 <!-- THE SCREENS -->
 		<div id="business">
            <div id="business_center">
     			<div class="business_font">
 					<h4>HI-FI SCREENS</h4>
-					<img src="images/pintjourney/flow.jpg">
 					<img src="images/pintjourney/hifi1.jpg">
 					<img src="images/pintjourney/hifi2.jpg">
 					<hr>
@@ -129,16 +80,23 @@
 		   </div>		
          </div>	
 
+<!-- THE SCREENS -->
+		<div id="business">
+			<div id="business_center">
+				 <div class="business_font">
+					 <h4>CASE STUDY</h4>
+					 <a href="https://medium.com/swlh/blood-donor-app-redesign-case-study-4e0325d3a346" target="blank"><img src="images/pintjourney/medium.png"></a>
+					 <hr>
+				 </div>
+			</div>		
+		  </div>	
 <!-- THE VISUAL -->
 		<div id="business">
 			<div id="business_center">
 				 <div class="business_font">
-					 <h4>DESIGN SYSTEMS</h4>
 					 <img src="images/pintjourney/my badeges.jpg">
 					 <BR>
 					<BR>
-					 <img src="images/pintjourney/report.jpg">
-					 <hr>
 				 </div>
 			</div>		
 		  </div>	
@@ -146,7 +104,6 @@
 		<div id="business">
 			<div id="business_center">
 		 		<div class="business_font">
-					 <h4>PROTOTYPE</h4>
 					 <iframe src="https://player.vimeo.com/video/245082187" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 					<br>
 					<br>
@@ -158,11 +115,11 @@
 	<div id="business_center">
 	  <div class="mybtn">
 		<a class="btn_left" href="pillmonster.html"> 
-  <div class="mybtn_wenzi">PREV PROJECT</div>
+  <div class="mybtn_wenzi">< PILL MONSTER</div>
   </a>	
   
 	<a href="rank.html" class="btn_right"> 
-  <div class="mybtn_wenzi">NEXT PROJECT</div>		
+  <div class="mybtn_wenzi">RANK ></div>		
   </a>	
   
   </div>
