--- a/rank.html
+++ b/rank.html
@@ -64,36 +64,7 @@
     		</div>
     	</div>
 
-<!-- THE PROCESS -->
-
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			   <h4>PROBLEMS & INSIGHTS</h4>
-			 <img src="images/rank/problem.png">
-			 <img src="images/rank/insights.png">
-			 <hr>
-		 </div>
-	</div>		
-  </div>	
-
-<!-- Goals -->		
-		
-		<div id="business">
-           <div id="business_center">
-    			<div class="business_font">
-					<h4>THE APPROACH</h4>
-					<ul class="bulletpoints">
-					<li>This project brief is creating a digital prototype to test a behavior change app.
-						For the mobile application, a scenario and the persona was generated in order to understand the potential user. Low fidelity wireframes were created using Balsamiq and Sketch, high fidelity designs were created Using Framer.js, the prototype was developed and tested on a couple users.</li>
-					<li>Most people have a planner to remind them what they need to do daily, however, it’s difficult to accomplish goals without a prioritized plan. For we have this idea of creating an adaptor for managing tasks to help you increase your productivities. I am aiming to help millennials get on top of the to-do lists and managing it all in an order decided by priorities.
-					</li>
-					</ul>
-					<hr>
-    			</div>
-		   </div>		
-         </div>			
-		
+	
 
 			
 
@@ -102,36 +73,21 @@
 		<div id="business">
            <div id="business_center">
     			<div class="business_font">
-      				<h4>THE PROCESS</h4>
-					<img src="images/rank/wireframe.png">
-					<img src="images/rank/storyboard.jpg">
-					<hr>
+      				<h4>CASE STUDY</h4>
+					<img src="images/rank/medium.png">
     			</div>
 		   </div>		
 		 </div>	
 
-		 <!-- THE VISUAL -->
-<div id="business">
-	<div id="business_center">
-		 <div class="business_font">
-			 <h4>VISUAL INSPIRATIONS</h4>
-			 <img src="images/rank/moodboard.png">
-			 <BR>
-			<BR>
-			 <hr>
-		 </div>
-	</div>		
-  </div>
+
 		 
 <!-- THE SCREENS -->
 		<div id="business">
            <div id="business_center">
     			<div class="business_font">
-					<h4>HI-FI MOCKUPS</h4>
 					<img src="images/rank/FLOW.png"><BR><BR>
 					<img src="images/rank/visual.png"><BR><BR>
 					<img src="images/rank/code.png"><BR><BR>
-					<hr>
     			</div>
 		   </div>		
          </div>	
@@ -141,7 +97,6 @@
 		<div id="business">
 			<div id="business_center">
 		 		<div class="business_font">
-					 <h4>PROTOTYPE</h4>
 					 <iframe src="https://player.vimeo.com/video/256686104" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 					<br>
 					<br>
@@ -153,11 +108,11 @@
 	<div id="business_center">
 	  <div class="mybtn">
 		<a class="btn_left" href="pintjourney.html"> 
-  <div class="mybtn_wenzi">PREV PROJECT</div>
+  <div class="mybtn_wenzi">< PINT JOURNEY </div>
   </a>	
   
 	<a href="venmo.html" class="btn_right"> 
-  <div class="mybtn_wenzi">NEXT PROJECT</div>		
+  <div class="mybtn_wenzi">APP REDESIGN ></div>		
   </a>	
   
   </div>
