--- a/trace.html
+++ b/trace.html
@@ -93,12 +93,12 @@
 <div id="business">
 	<div id="business_center">
 	  <div class="mybtn">
-		<a class="btn_left" href="ogilvy.html"> 
-  <div class="mybtn_wenzi">PREV PROJECT</div>
+		<a class="btn_left" href="adobe.html"> 
+  <div class="mybtn_wenzi">< ADOBE WORK</div>
   </a>	
   
 	<a href="thismoment.html" class="btn_right"> 
-  <div class="mybtn_wenzi">NEXT PROJECT</div>		
+  <div class="mybtn_wenzi">THESIS PROJECT ></div>		
   </a>	
   
   </div>
