--- a/covidresponse.html
+++ b/covidresponse.html
@@ -76,11 +76,11 @@
   <div id="business_center">
     <div class="mybtn">
       <a class="btn_left" href="theboringprojects.html"> 
-<div class="mybtn_wenzi">PREV PROJECT</div>
+<div class="mybtn_wenzi">< SIDE PROJECTS</div>
 </a>	
 
   <a href="adobe.html" class="btn_right"> 
-<div class="mybtn_wenzi">NEXT PROJECT</div>		
+<div class="mybtn_wenzi">ADOBE WORK ></div>		
 </a>	
 
 </div>
