--- a/theboringprojects.html
+++ b/theboringprojects.html
@@ -132,11 +132,11 @@
   <div id="business_center">
     <div class="mybtn">
       <a class="btn_left" href="adobe.html"> 
-<div class="mybtn_wenzi">PREV PROJECT</div>
+<div class="mybtn_wenzi">< ADOBE WORK</div>
 </a>	
 
-  <a href="covidresponse.html" class="btn_right"> 
-<div class="mybtn_wenzi">NEXT PROJECT</div>		
+  <a href="pillmonster.html" class="btn_right"> 
+<div class="mybtn_wenzi">SOME UX WORK ></div>		
 </a>	
 
 </div>
