--- a/adobe.html
+++ b/adobe.html
@@ -179,7 +179,7 @@
 			  </a>	
 	         
 	            <a href="theboringprojects.html" class="btn_right"> 
-				   <div class="mybtn_wenzi">> SIDE PROJECTS</div>		
+				   <div class="mybtn_wenzi">SIDE PROJECTS > </div>		
 				  </a>	
 				  
 				 </div>
