--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
 							<section class="panel">
 								<div class="gallery">
 									<div class="group span-3">
-										<a href="covidresponse.html" target="_blank" class="image filtered span-3" data-position="bottom"><span>MY COVID RESPONSE:MENTORSHIP</span><img src="images/gallery/thumbs/covid.jpg" alt="" /></a>
-										<a href="adobe.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>WORK @ ADOBE</span><img src="images/gallery/thumbs/adobe.jpg" alt="" /></a>
-										<a href="theboringprojects.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><span>SIDE PROJECTS</span><img src="images/gallery/thumbs/boring.jpg" alt="" /></a>
+										<a href="covidresponse.html" target="_blank" class="image filtered span-3 " data-position="bottom"><img src="images/gallery/thumbs/1.jpg" alt="" id="covid_img"/></a >
+										<a href="adobe.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/2a.jpg" alt="" id="adobe_img"/></a >
+										<a href="theboringprojects.html" target="_blank" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/2.jpg" alt="" id="boring_img"/></a >
 									</div>
 								</div>
 							</section>
+
+
 
 						<!-- Panel 2-->
 						<section class="panel">
