--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="navright m">
-            <a href="###" _fcksavedurl="###" onclick="bb(this,'a',false)"><img src="mypic/tb.jpg"></a>
+            <a href="https://www.instagram.com/theboringprojects/" onclick="bb(this,'a',false)"><img src="mypic/inslogo.png"></a>
         </div>
 
         <div id="a" class="topnav" style="display:none">
